appId: org.wikipedia
tags:
  - android
---
- runFlow: subflows/onboarding.yaml
- tapOn:
    id: "org.wikipedia:id/search_container"
- runScript: scripts/getSearchQuery.js
- inputText: ${output.result}
- assertVisible: ${output.result}
