appId: org.wikimedia.wikipedia
tags:
    - ios
---
- runFlow: "subflows/onboarding.yaml"
- tapOn: Search Wikipedia
- runScript: "scripts/getSearchQuery.js"
- inputText: ${output.result}
- assertVisible: ${output.result}
